[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cardtool"
version = "0.0.1"
authors = [
    {name = "Daniel Aucatoma", email = "d.aucatoma96@gmail.com"}
]
description = "An encrypted card generator tool"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["DUKPT", "credit", "card", "tool"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
py_modules=['command.gencard']

[project.entry-points]
console-scripts = { gencard = 'command.gencard:gencard' }


[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
precision = 2
skip_covered = false
fail_under = 100

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "test",
]
